# MCP-remove-background

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  spack.yaml
MCP_remove_background/: cli.py  constants.py  core.py  exceptions.py  server.py
MCP_remove_background/services/: __init__.py  background_remover.py
MCP_remove_background/tools/: __init__.py  remove_background.py
docs/: README.md  background-removal-mcp-plan.md
scripts/: mcp-remove-background.service.template  spack-ensure.sh  test-package.sh
tests/: test-mock.py
tests/integration/: __init__.py  test_server.py
tests/mocks/: __init__.py  rembg_mock.py
tests/unit/: __init__.py  test_background_remover.py  test_constants.py  test_exceptions.py  test_tools.py
